# Head-Factory

./: .env.example  .gitignore  CHANGELOG.md  README.md  pyproject.toml
data/: characters.json  runs.json
docs/: ART_BIBLE.md  PRODUCTION_SPEC.md
head_factory/: cli.py  pipeline.py  review.py
